crates/test-files/fixtures/compile_errors/ctx_not_ctx_type.fe
contract Foo {
    pub fn bar(ctx: u256) {}
}
